Fixed an erroneous decrement which was meant to be removed before submitting previous PR: (#120)
Caused the 'Older' button to stop showing a page earlier than intended.

--- a/src/Views/Blog/Index.cshtml
+++ b/src/Views/Blog/Index.cshtml
@@ -2,7 +2,7 @@
 @inject IOptionsSnapshot<BlogSettings> settings
 @{
     int currentPage = int.Parse(ViewContext.RouteData.Values["page"] as string ?? "0");
-    int pageCount = Model.ToList().Count-1; 
+    int pageCount = Model.ToList().Count; 
 }
 
 @foreach (var post in Model)
