--- a/src/Views/Blog/Index.cshtml
+++ b/src/Views/Blog/Index.cshtml
@@ -2,7 +2,10 @@
 @inject IOptionsSnapshot<BlogSettings> settings
 @{
     int currentPage = int.Parse(ViewContext.RouteData.Values["page"] as string ?? "0");
-    int pageCount = Model.ToList().Count; 
+    //int pageCount = Model.ToList().Count;
+
+    // fixed pagination issue. Model.Count() would always be equal to the number of posts per page not the actual page count.
+    int pageCount = int.Parse(ViewData["TotalPostCount"].ToString()) / 2; 
 }
 
 @foreach (var post in Model)
