--- a/src/Views/Blog/Post.cshtml
+++ b/src/Views/Blog/Post.cshtml
@@ -43,12 +43,14 @@
                     <li itemprop="articleSection"><a asp-controller="Blog" asp-action="Category" asp-route-category="@cat.ToLowerInvariant()" asp-route-page="">@cat</a></li>
                 }
             </ul>
-            <text>and has</text>
         }
-
-        <a href="@Model.GetLink()#comments" itemprop="discussionUrl" title="Go to the comments section">
-            <span itemprop="commentCount">@Model.Comments.Count</span> @(Model.Comments.Count == 1 ? "comment" : "comments")
-        </a>
+        @if (settings.Value.DisplayComments)
+        {
+            <text>and has</text>
+            <a href="@Model.GetLink()#comments" itemprop="discussionUrl" title="Go to the comments section">
+                <span itemprop="commentCount">@Model.Comments.Count</span> @(Model.Comments.Count == 1 ? "comment" : "comments")
+            </a>
+        }
 
         <meta itemprop="author" content="@settings.Value.Owner" />
         <meta itemprop="dateModified" content="@Model.LastModified.ToString("s")" />
@@ -59,12 +61,18 @@
 @if (showFullPost)
 {
     await Html.RenderPartialAsync("_SocialSharing", Model.Title);
-    await Html.RenderPartialAsync("Comments");
+    @if (settings.Value.DisplayComments)
+    {
+        await Html.RenderPartialAsync("Comments"); 
+    }
 
     @section Preload {
         @* This lazy loads the stylesheet in a non-render blocking way *@
-        <link rel="preload" href="~/css/comments.scss" as="style" />
-        <noscript><link rel="stylesheet" href="~/css/comments.scss" /></noscript>
+        @if (settings.Value.DisplayComments)
+        {
+            <link rel="preload" href="~/css/comments.scss" as="style" />
+            <noscript><link rel="stylesheet" href="~/css/comments.scss" /></noscript>
+        }
         @if (isCodePreview)
         {
             <link rel="preload" href="~/lib/prism/prism.scss" as="style" />
