--- a/src/Views/Blog/Index.cshtml
+++ b/src/Views/Blog/Index.cshtml
@@ -3,8 +3,10 @@
 @{
     int currentPage = int.Parse(ViewContext.RouteData.Values[Constants.page] as string ?? "0");
 
-    int pageCount;
-    pageCount = int.TryParse(ViewData[Constants.TotalPostCount].ToString(), out pageCount) ? 0 : pageCount / 2;
+    int totalPosts;
+    totalPosts = int.TryParse(ViewData[Constants.TotalPostCount].ToString(), out totalPosts) ? totalPosts : 0;
+
+    int totalPages = (totalPosts / this.settings.Value.PostsPerPage) - (totalPosts % this.settings.Value.PostsPerPage == 0 ? 1 : 0);
 }
 
 @await foreach (var post in Model)
@@ -13,7 +15,7 @@
 }
 
 <nav class="pagination container" aria-label="Pagination">
-    @if ((await Model.AnyAsync()) && currentPage < pageCount)
+    @if ((await Model.AnyAsync()) && currentPage < totalPages)
     {
         <a rel="prev" href="@ViewData[Constants.prev]" title="Older posts">&laquo; Older</a>
     }
@@ -24,7 +26,7 @@
     <br /><br />
 
     @section Head {
-        @if ((await Model.AnyAsync()) && currentPage < pageCount)
+        @if ((await Model.AnyAsync()) && currentPage < totalPages)
         {
             <link rel="prev" href="@ViewData[Constants.prev]" />
         }
