Add support for tags (#168)
* Rename tag to category in edit page.

* Add support for tags.

--- a/src/Views/Blog/Edit.cshtml
+++ b/src/Views/Blog/Edit.cshtml
@@ -1,9 +1,10 @@
-﻿@model Post
+@model Post
 @{
     var isNew = string.IsNullOrEmpty(Model.Title);
     ViewData[Constants.Title] = "Edit " + (Model.Title ?? "new post");
     var host = Context.Request.Host.ToString();
     var allCats = ViewData[Constants.AllCats] as List<string> ?? new List<string>();
+    var allTags = ViewData[Constants.AllTags] as List<string> ?? new List<string>();
 }
 
 @section Head {
@@ -24,14 +25,26 @@
         <span class="desc" id="desc_slug">The part of the URL that identifies this blog post</span>
         <br />
 
-        <label for="categories" class="label">Tags</label>
-        <input type="text" name="selecttag" id="selecttag" aria-describedby="desc_categories" list="taglist" placeholder="@string.Join(", ", Model.Categories)"  />
+        <label for="categories" class="label">Categories</label>
+        <input type="text" name="selectcat" id="selectcat" aria-describedby="desc_categories" list="catlist" placeholder="@string.Join(", ", Model.Categories)"  />
         <input type="text" name="categories" id="categories" value="@string.Join(", ", Model.Categories)" hidden />
         <span class="desc" id="desc_categories">Select, or build a comma separated list of keywords - to remove double the keyword</span>
-        <datalist id="taglist">
+        <datalist id="catlist">
             @foreach (var cat in allCats)
             {
                 <option value="@cat"/>
+            }
+            </datalist>
+        <br />
+
+        <label for="tags" class="label">Tags</label>
+        <input type="text" name="selecttag" id="selecttag" aria-describedby="desc_tags" list="taglist" placeholder="@string.Join(", ", Model.Tags)"  />
+        <input type="text" name="tags" id="tags" value="@string.Join(", ", Model.Tags)" hidden />
+        <span class="desc" id="desc_tags">Select, or build a comma separated list of keywords - to remove double the keyword</span>
+        <datalist id="taglist">
+            @foreach (var tag in allTags)
+            {
+                <option value="@tag"/>
             }
             </datalist>
         <br />
