Updated: Nuget Packages (#196)
Fixed: issues after NuGet updates
Improved: Icons and UI

--- a/src/Views/Blog/Index.cshtml
+++ b/src/Views/Blog/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@model IAsyncEnumerable<Post>
+@model IAsyncEnumerable<Post>
 @inject IOptionsSnapshot<BlogSettings> settings
 @{
     int currentPage = int.Parse(ViewContext.RouteData.Values[Constants.page] as string ?? "0");
 
     int totalPosts;
-    totalPosts = int.TryParse(ViewData[Constants.TotalPostCount].ToString(), out totalPosts) ? totalPosts : 0;
+    totalPosts = int.TryParse(ViewData[Constants.TotalPostCount]!.ToString(), out totalPosts) ? totalPosts : 0;
 
     int totalPages = (totalPosts / this.settings.Value.PostsPerPage) - (totalPosts % this.settings.Value.PostsPerPage == 0 ? 1 : 0);
 }
