--- a/src/wwwroot/css/abovethefold.scss
+++ b/src/wwwroot/css/abovethefold.scss
@@ -19,7 +19,7 @@ html {
 }
 
 body {
-    font: 19px/1.6 "Open Sans", Ubuntu, "Nimbus Sans L", Avenir, AvenirNext, "Segoe UI", Helvetica, Arial, sans-serif;
+    font: 19px/1.6 "Poppins", "Open Sans", Ubuntu, "Nimbus Sans L", Avenir, AvenirNext, "Segoe UI", Helvetica, Arial, sans-serif;
     margin-bottom: $footer_height;
     color: $text_color;
 }
