--- a/src/Views/Blog/Comments.cshtml
+++ b/src/Views/Blog/Comments.cshtml
@@ -1,4 +1,4 @@
-﻿@model Post
+@model Post
 @inject IOptionsSnapshot<BlogSettings> settings
 
 <section id="comments">
@@ -21,7 +21,7 @@
                     <p itemprop="text">@comment.RenderContent()</p>
                     <span itemprop="name">@comment.Author</span>
 
-                    @if (User.Identity.IsAuthenticated)
+                    @if (User.Identity!.IsAuthenticated)
                     {
                         <a class="noline" href="mailto:@comment.Email" title="Send email to @comment.Email">&#x2709;</a>
                         <a class="delete noline" asp-controller="Blog" asp-Action="DeleteComment" asp-route-postid="@Model.ID" asp-route-commentid="@comment.ID" asp-route-afrt="@ViewData["afrt"]" title="Delete the comment...">Delete...</a>
