--- a/src/wwwroot/css/_variables.scss
+++ b/src/wwwroot/css/_variables.scss
@@ -5,6 +5,7 @@ $light-bg-color: #f7f7f7;
 
 // Comments
 $comments_bg_color: #f1f1f1;
-$comments_border-color: #dfdfdf;
+$comments_border-color: rgba(0, 0, 0, 0.06);
+$comments_border-shadow-color: rgba(0, 0, 0, 0.05);
 $comments_input_border-color: #bbb;
 $comments_highlight_color: #ffec82;
